# Easy-RT-DETR

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-pages.yml
docs/: architecture.md  experiments.md  index.md  remote-training.md  status.md  workflow.md
easy_rtdetr/: __init__.py  assigners.py  attention.py  auxiliary_head.py  backbone.py  cli.py  config.py  configuration.py  datasets.py  decoder.py  denoising.py  encoder.py  eval_metrics.py  factory.py  heads.py  losses.py  matcher.py  model.py  postprocess.py  queries.py  score_calibration.py  utils.py
easy_rtdetr/engine/: __init__.py  checkpoints.py  evaluator.py  logging.py  profiler.py  solver.py
easy_rtdetr/optim/: __init__.py  builders.py
scripts/: calibrate.py  eval.py  eval_pennfudan_checkpoint.py  eval_voc_car_checkpoint.py  prepare_dataset.py  remote_dispatch.py  run_remote.py  train.py  train_pennfudan_cpu.py  train_synthetic_cpu.py  train_voc_car.py  visualize.py  visualize_checkpoint_detections.py  visualize_pennfudan_predictions.py  visualize_voc_car_predictions.py
tests/: test_assigners.py  test_auxiliary_head.py  test_backbone.py  test_configuration.py  test_datasets.py  test_decoder.py  test_encoder.py  test_engine_utils.py  test_eval_metrics.py  test_losses.py  test_matcher.py  test_model.py  test_postprocess.py  test_queries.py  test_score_calibration.py
