[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-rt-detr"
version = "0.1.0"
description = "Minimal PyTorch implementation of RT-DETRv3 style object detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "scipy>=1.11",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[tool.setuptools.packages.find]
include = ["easy_rtdetr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
